# zero-to-prod

./: .gitignore  Cargo.toml
migrations/: 20220418150504_create_subscriptions_table.sql
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
