[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.5.1"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "uuid", "chrono"] }
config = "0.11"
dotenv = "0.15.0"
# uuid = { version = "1.0.0", features = ["v4"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"

[dev-dependencies]
reqwest = "0.11.10"
tower = { version = "0.4.12", features = ["util"] }
